tests/eu.numberfour.n4js.spec.examples.xpect.tests/testdata/spec_chap_05_02_07_05__Optional_Fields/Example_Problem2OfOptionalFields.n4js.xt
/* XPECT_SETUP eu.numberfour.n4js.spec.examples.xpect.tests.SpecExamplesTest END_SETUP */


class C {
	public field?: string;
}

class D {}

let c: ~C;

// XPECT errors --> "D is not a structural subtype of ~C: missing field field." at "new D()"
c = new D(); // error: new expression but D is missing setter

c.field = "hello";

